--- a/public/index.html
+++ b/public/index.html
@@ -1,56 +1,260 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Employee FAQ Bot</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 600px;
-      margin: 50px auto;
-      padding: 20px;
-      background: #f9f9f9;
+    :root {
+      --bg: #f6f7fb;
+      --card: #ffffff;
+      --text: #0f172a;
+      --muted: #64748b;
+      --primary: #2563eb;
+      --primary-ghost: rgba(37, 99, 235, .12);
+      --bot: #eef2ff;
+      --user: #e0f2fe;
+      --radius: 14px;
+      --shadow: 0 10px 30px rgba(2, 6, 23, .06);
     }
-    h1 {
+    * { box-sizing: border-box; }
+    html, body {
+      height: 100%;
+      margin: 0;
+      background: var(--bg);
+      color: var(--text);
+      font: 16px/1.5 system-ui, -apple-system, Segoe UI, Roboto, Inter, "Helvetica Neue", Arial, sans-serif;
+    }
+    .wrap {
+      max-width: 820px;
+      margin: 0 auto;
+      padding: 28px 18px 80px;
+    }
+    .card {
+      background: var(--card);
+      border-radius: 20px;
+      box-shadow: var(--shadow);
+      padding: 18px;
+    }
+    .title {
+      font-weight: 800;
+      letter-spacing: .2px;
+      font-size: 22px;
+      margin: 0 0 14px;
       text-align: center;
     }
-    input, button {
-      padding: 10px;
+    .messages {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      max-height: 62vh;
+      overflow: auto;
+      padding: 6px;
+      scroll-behavior: smooth;
+    }
+    .row {
+      display: flex;
+      gap: 10px;
+      align-items: flex-end;
+    }
+    .row.user { justify-content: flex-end; }
+    .avatar {
+      width: 30px; height: 30px; border-radius: 50%;
+      background: var(--primary-ghost);
+      display: inline-flex; align-items: center; justify-content: center;
+      color: var(--primary);
+      font-size: 14px; flex: 0 0 auto;
+    }
+    .row.user .avatar { background: #cffafe; color: #0284c7; }
+    .bubble {
+      max-width: 78%;
+      padding: 10px 12px;
+      border-radius: var(--radius);
+      background: var(--bot);
+      border: 1px solid rgba(2, 6, 23, .06);
+      white-space: pre-wrap;
+      word-wrap: break-word;
+    }
+    .row.user .bubble {
+      background: var(--user);
+      border-top-right-radius: 6px;
+    }
+    .row.bot .bubble {
+      border-top-left-radius: 6px;
+    }
+    .muted { color: var(--muted); }
+    .inputBar {
+      position: sticky;
+      bottom: 0;
+      margin-top: 14px;
+      display: grid;
+      grid-template-columns: 1fr auto;
+      gap: 10px;
+      background: transparent;
+    }
+    .inputBar input {
+      border: 1px solid #e5e7eb;
+      border-radius: 12px;
+      padding: 12px 14px;
+      outline: none;
       font-size: 16px;
+      background: #fff;
+      box-shadow: var(--shadow);
     }
-    input {
-      width: 75%;
+    .inputBar button {
+      border: 0;
+      padding: 12px 16px;
+      border-radius: 12px;
+      background: var(--primary);
+      color: #fff;
+      font-weight: 600;
+      cursor: pointer;
+      box-shadow: 0 8px 20px rgba(37,99,235,.25);
     }
-    button {
-      width: 20%;
-      margin-left: 5px;
+    .inputBar button[disabled] {
+      opacity: .6; cursor: not-allowed; box-shadow: none;
     }
-    #response {
-      margin-top: 20px;
-      padding: 15px;
-      background: white;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      min-height: 40px;
+    .typing {
+      display: inline-flex; gap: 4px; align-items: center;
+    }
+    .dot {
+      width: 6px; height: 6px; border-radius: 50%; background: #94a3b8;
+      animation: bounce 1.2s infinite ease-in-out;
+    }
+    .dot:nth-child(2) { animation-delay: .15s; }
+    .dot:nth-child(3) { animation-delay: .3s; }
+    @keyframes bounce {
+      0%, 80%, 100% { transform: translateY(0); opacity: .5; }
+      40% { transform: translateY(-5px); opacity: 1; }
+    }
+    .footer {
+      margin-top: 10px;
+      text-align: center;
+      font-size: 12px;
+      color: var(--muted);
     }
   </style>
 </head>
 <body>
-  <h1>Employee FAQ Bot</h1>
-  <div>
-    <input type="text" id="question" placeholder="Ask me anything..." />
-    <button onclick="ask()">Ask</button>
+  <div class="wrap">
+    <h1 class="title">Employee FAQ Bot</h1>
+
+    <div class="card">
+      <div id="messages" class="messages" aria-live="polite">
+        <div class="row bot">
+          <div class="avatar" aria-hidden="true">🤖</div>
+          <div class="bubble">
+            Hi! Ask me anything from your Employee Handbook database.
+          </div>
+        </div>
+      </div>
+
+      <form id="bar" class="inputBar">
+        <input id="q" type="text" placeholder="Type your question…" autocomplete="off" />
+        <button id="send" type="submit">Send</button>
+      </form>
+    </div>
+
+    <div class="footer">Powered by your Notion DB</div>
   </div>
-  <div id="response"></div>
 
   <script>
-    async function ask() {
-      const q = document.getElementById("question").value;
-      const res = await fetch(`/api/ask?q=${encodeURIComponent(q)}`);
-      const data = await res.json();
-      document.getElementById("response").innerText = data.answer || "No answer found.";
+    const $ = (sel) => document.querySelector(sel);
+    const messages = $("#messages");
+    const input = $("#q");
+    const btn = $("#send");
+    const form = $("#bar");
+
+    function addMessage(text, who = "bot") {
+      const row = document.createElement("div");
+      row.className = `row ${who}`;
+      const avatar = document.createElement("div");
+      avatar.className = "avatar";
+      avatar.textContent = who === "user" ? "🧑" : "🤖";
+      avatar.setAttribute("aria-hidden", "true");
+      const bubble = document.createElement("div");
+      bubble.className = "bubble";
+      bubble.textContent = text;
+      if (who === "user") { row.append(bubble, avatar); }
+      else { row.append(avatar, bubble); }
+      messages.appendChild(row);
+      messages.scrollTop = messages.scrollHeight;
+      return bubble;
     }
+
+    function addTyping() {
+      const row = document.createElement("div");
+      row.className = "row bot";
+      const avatar = document.createElement("div");
+      avatar.className = "avatar";
+      avatar.textContent = "🤖";
+      avatar.setAttribute("aria-hidden", "true");
+      const bubble = document.createElement("div");
+      bubble.className = "bubble";
+      bubble.innerHTML = `<span class="typing"><span class="dot"></span><span class="dot"></span><span class="dot"></span></span>`;
+      row.append(avatar, bubble);
+      messages.appendChild(row);
+      messages.scrollTop = messages.scrollHeight;
+      return row; // return the whole row so we can remove it
+    }
+
+    async function ask(question) {
+      // prefer POST; your API also supports GET ?q=
+      try {
+        const res = await fetch("/api/ask", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ question })
+        });
+        if (!res.ok) {
+          const text = await res.text().catch(() => "");
+          throw new Error(text || `Request failed (${res.status})`);
+        }
+        const data = await res.json();
+        return data.answer ?? JSON.stringify(data);
+      } catch (e) {
+        // fallback GET for older deployments
+        try {
+          const res = await fetch(`/api/ask?q=${encodeURIComponent(question)}`);
+          const data = await res.json();
+          if (data.answer) return data.answer;
+          throw new Error(JSON.stringify(data));
+        } catch (err) {
+          throw e; // show the original error
+        }
+      }
+    }
+
+    form.addEventListener("submit", async (ev) => {
+      ev.preventDefault();
+      const q = input.value.trim();
+      if (!q) return;
+
+      addMessage(q, "user");
+      input.value = "";
+      input.focus();
+      btn.disabled = true;
+
+      const typingRow = addTyping();
+      try {
+        const a = await ask(q);
+        typingRow.remove();
+        addMessage(a || "No answer found.", "bot");
+      } catch (err) {
+        typingRow.remove();
+        addMessage(`Error: ${err.message || err}`, "bot");
+      } finally {
+        btn.disabled = false;
+      }
+    });
+
+    // Submit on Enter (without adding newline)
+    input.addEventListener("keydown", (e) => {
+      if (e.key === "Enter" && !e.shiftKey) {
+        e.preventDefault();
+        form.requestSubmit();
+      }
+    });
   </script>
 </body>
 </html>
