--- a/index.html
+++ b/index.html
@@ -5,77 +5,256 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Employee FAQ Bot</title>
   <style>
-    :root { font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; }
-    body { margin: 0; background:#f6f7f9; }
-    .wrap { max-width: 760px; margin: 40px auto; padding: 24px; background:#fff; border-radius:16px; box-shadow: 0 8px 30px rgba(0,0,0,.06); }
-    h1 { margin:0 0 16px; font-size: 22px; }
-    .row { display:flex; gap:8px; }
-    input[type="text"] { flex:1; padding:12px 14px; border:1px solid #d7dbe3; border-radius:10px; outline:none; }
-    button { padding:12px 16px; border:0; border-radius:10px; background:#2563eb; color:#fff; cursor:pointer; }
-    button:disabled { opacity:.6; cursor:not-allowed; }
-    .answer { margin-top:16px; padding:14px; background:#f1f5ff; border:1px solid #d7e2ff; border-radius:10px; white-space:pre-wrap; }
-    .msg { margin-top:12px; color:#555; font-size:14px; }
-    .list { margin-top:16px; display:grid; gap:8px; }
-    .bubble { padding:12px 14px; border-radius:12px; background:#eef2f7; }
-    .you { background:#e8f0ff; }
+    :root {
+      --bg: #f6f7fb;
+      --card: #ffffff;
+      --text: #0f172a;
+      --muted: #64748b;
+      --primary: #2563eb;
+      --primary-ghost: rgba(37, 99, 235, .12);
+      --bot: #eef2ff;
+      --user: #e0f2fe;
+      --radius: 14px;
+      --shadow: 0 10px 30px rgba(2, 6, 23, .06);
+    }
+    * { box-sizing: border-box; }
+    html, body {
+      height: 100%;
+      margin: 0;
+      background: var(--bg);
+      color: var(--text);
+      font: 16px/1.5 system-ui, -apple-system, Segoe UI, Roboto, Inter, "Helvetica Neue", Arial, sans-serif;
+    }
+    .wrap {
+      max-width: 820px;
+      margin: 0 auto;
+      padding: 28px 18px 80px;
+    }
+    .card {
+      background: var(--card);
+      border-radius: 20px;
+      box-shadow: var(--shadow);
+      padding: 18px;
+    }
+    .title {
+      font-weight: 800;
+      letter-spacing: .2px;
+      font-size: 22px;
+      margin: 0 0 14px;
+      text-align: center;
+    }
+    .messages {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      max-height: 62vh;
+      overflow: auto;
+      padding: 6px;
+      scroll-behavior: smooth;
+    }
+    .row {
+      display: flex;
+      gap: 10px;
+      align-items: flex-end;
+    }
+    .row.user { justify-content: flex-end; }
+    .avatar {
+      width: 30px; height: 30px; border-radius: 50%;
+      background: var(--primary-ghost);
+      display: inline-flex; align-items: center; justify-content: center;
+      color: var(--primary);
+      font-size: 14px; flex: 0 0 auto;
+    }
+    .row.user .avatar { background: #cffafe; color: #0284c7; }
+    .bubble {
+      max-width: 78%;
+      padding: 10px 12px;
+      border-radius: var(--radius);
+      background: var(--bot);
+      border: 1px solid rgba(2, 6, 23, .06);
+      white-space: pre-wrap;
+      word-wrap: break-word;
+    }
+    .row.user .bubble {
+      background: var(--user);
+      border-top-right-radius: 6px;
+    }
+    .row.bot .bubble {
+      border-top-left-radius: 6px;
+    }
+    .muted { color: var(--muted); }
+    .inputBar {
+      position: sticky;
+      bottom: 0;
+      margin-top: 14px;
+      display: grid;
+      grid-template-columns: 1fr auto;
+      gap: 10px;
+      background: transparent;
+    }
+    .inputBar input {
+      border: 1px solid #e5e7eb;
+      border-radius: 12px;
+      padding: 12px 14px;
+      outline: none;
+      font-size: 16px;
+      background: #fff;
+      box-shadow: var(--shadow);
+    }
+    .inputBar button {
+      border: 0;
+      padding: 12px 16px;
+      border-radius: 12px;
+      background: var(--primary);
+      color: #fff;
+      font-weight: 600;
+      cursor: pointer;
+      box-shadow: 0 8px 20px rgba(37,99,235,.25);
+    }
+    .inputBar button[disabled] {
+      opacity: .6; cursor: not-allowed; box-shadow: none;
+    }
+    .typing {
+      display: inline-flex; gap: 4px; align-items: center;
+    }
+    .dot {
+      width: 6px; height: 6px; border-radius: 50%; background: #94a3b8;
+      animation: bounce 1.2s infinite ease-in-out;
+    }
+    .dot:nth-child(2) { animation-delay: .15s; }
+    .dot:nth-child(3) { animation-delay: .3s; }
+    @keyframes bounce {
+      0%, 80%, 100% { transform: translateY(0); opacity: .5; }
+      40% { transform: translateY(-5px); opacity: 1; }
+    }
+    .footer {
+      margin-top: 10px;
+      text-align: center;
+      font-size: 12px;
+      color: var(--muted);
+    }
   </style>
 </head>
 <body>
   <div class="wrap">
-    <h1>Employee FAQ Bot</h1>
-    <div class="row">
-      <input id="q" type="text" placeholder="Ask a question (e.g., How to recruit)" />
-      <button id="askBtn">Ask</button>
-    </div>
-    <div id="msg" class="msg"></div>
-    <div id="answer" class="answer" style="display:none"></div>
+    <h1 class="title">Employee FAQ Bot</h1>
 
-    <div id="history" class="list"></div>
+    <div class="card">
+      <div id="messages" class="messages" aria-live="polite">
+        <div class="row bot">
+          <div class="avatar" aria-hidden="true">🤖</div>
+          <div class="bubble">
+            Hi! Ask me anything from your Employee Handbook database.
+          </div>
+        </div>
+      </div>
+
+      <form id="bar" class="inputBar">
+        <input id="q" type="text" placeholder="Type your question…" autocomplete="off" />
+        <button id="send" type="submit">Send</button>
+      </form>
+    </div>
+
+    <div class="footer">Powered by your Notion DB</div>
   </div>
 
   <script>
-    const qEl = document.getElementById('q');
-    const btn = document.getElementById('askBtn');
-    const msg = document.getElementById('msg');
-    const ans = document.getElementById('answer');
-    const history = document.getElementById('history');
+    const $ = (sel) => document.querySelector(sel);
+    const messages = $("#messages");
+    const input = $("#q");
+    const btn = $("#send");
+    const form = $("#bar");
 
-    async function ask() {
-      const q = qEl.value.trim();
-      if (!q) return;
-      btn.disabled = true;
-      msg.textContent = 'Thinking…';
-      ans.style.display = 'none';
+    function addMessage(text, who = "bot") {
+      const row = document.createElement("div");
+      row.className = `row ${who}`;
+      const avatar = document.createElement("div");
+      avatar.className = "avatar";
+      avatar.textContent = who === "user" ? "🧑" : "🤖";
+      avatar.setAttribute("aria-hidden", "true");
+      const bubble = document.createElement("div");
+      bubble.className = "bubble";
+      bubble.textContent = text;
+      if (who === "user") { row.append(bubble, avatar); }
+      else { row.append(avatar, bubble); }
+      messages.appendChild(row);
+      messages.scrollTop = messages.scrollHeight;
+      return bubble;
+    }
 
+    function addTyping() {
+      const row = document.createElement("div");
+      row.className = "row bot";
+      const avatar = document.createElement("div");
+      avatar.className = "avatar";
+      avatar.textContent = "🤖";
+      avatar.setAttribute("aria-hidden", "true");
+      const bubble = document.createElement("div");
+      bubble.className = "bubble";
+      bubble.innerHTML = `<span class="typing"><span class="dot"></span><span class="dot"></span><span class="dot"></span></span>`;
+      row.append(avatar, bubble);
+      messages.appendChild(row);
+      messages.scrollTop = messages.scrollHeight;
+      return row; // return the whole row so we can remove it
+    }
+
+    async function ask(question) {
+      // prefer POST; your API also supports GET ?q=
       try {
-        const res = await fetch(`/api/ask?q=${encodeURIComponent(q)}`);
+        const res = await fetch("/api/ask", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ question })
+        });
+        if (!res.ok) {
+          const text = await res.text().catch(() => "");
+          throw new Error(text || `Request failed (${res.status})`);
+        }
         const data = await res.json();
-
-        // Show answer
-        ans.style.display = 'block';
-        ans.textContent = data.answer || 'No answer found.';
-
-        // Add to mini history
-        const you = document.createElement('div');
-        you.className = 'bubble you';
-        you.textContent = q;
-        const bot = document.createElement('div');
-        bot.className = 'bubble';
-        bot.textContent = data.answer || 'No answer found.';
-        history.prepend(bot);
-        history.prepend(you);
+        return data.answer ?? JSON.stringify(data);
       } catch (e) {
-        ans.style.display = 'block';
-        ans.textContent = 'Error contacting the server.';
-      } finally {
-        btn.disabled = false;
-        msg.textContent = '';
-        qEl.select();
+        // fallback GET for older deployments
+        try {
+          const res = await fetch(`/api/ask?q=${encodeURIComponent(question)}`);
+          const data = await res.json();
+          if (data.answer) return data.answer;
+          throw new Error(JSON.stringify(data));
+        } catch (err) {
+          throw e; // show the original error
+        }
       }
     }
 
-    btn.addEventListener('click', ask);
-    qEl.addEventListener('keydown', (e) => (e.key === 'Enter') && ask());
+    form.addEventListener("submit", async (ev) => {
+      ev.preventDefault();
+      const q = input.value.trim();
+      if (!q) return;
+
+      addMessage(q, "user");
+      input.value = "";
+      input.focus();
+      btn.disabled = true;
+
+      const typingRow = addTyping();
+      try {
+        const a = await ask(q);
+        typingRow.remove();
+        addMessage(a || "No answer found.", "bot");
+      } catch (err) {
+        typingRow.remove();
+        addMessage(`Error: ${err.message || err}`, "bot");
+      } finally {
+        btn.disabled = false;
+      }
+    });
+
+    // Submit on Enter (without adding newline)
+    input.addEventListener("keydown", (e) => {
+      if (e.key === "Enter" && !e.shiftKey) {
+        e.preventDefault();
+        form.requestSubmit();
+      }
+    });
   </script>
 </body>
 </html>
